--- a/Project.toml
+++ b/Project.toml
@@ -16,8 +16,29 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Gurobi = ">= 1.3.0"
 LinearAlgebra = "<0.0.1, 1"
 Optimisers = ">= 0.3.3"
+Pkg = "1.0"
 ProgressMeter = ">= 1.0.0"
+QuantumToolbox = "0.29.0"
 Random = ">= 1.6"
 Reexport = ">= 1.2.2"
 SparseArrays = ">= 1.10.0"
+StableRNGs = "1.0.1"
+Suppressor = "0.2"
+Test = "1.0"
+TestItemRunner = "1.1.0"
+Aqua = "0.8.0"
+JET = "0.9.19"
 julia = "1.8"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+QuantumToolbox = "6c2fb7c5-b903-41d2-bc5e-5a7c320b9fab"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+
+[targets]
+test = ["Test", "Pkg", "TestItemRunner", "StableRNGs", "Suppressor", "QuantumToolbox", "Aqua", "JET"]
