--- a/.JuliaFormatter.toml
+++ b/.JuliaFormatter.toml
@@ -1,11 +1,23 @@
-margin=120
-always_for_in=true
-remove_extra_newlines=true
-long_to_short_function_def=true
-always_use_return=true
-format_docstrings=true
-indent_submodule=true
-format_markdown=false
-ignore = [
-    "docs/make.jl",
-]
+indent = 4
+margin = 92
+always_for_in = true
+whitespace_typedefs = false
+whitespace_ops_in_indices = false
+remove_extra_newlines = true
+pipe_to_function_call = true
+short_to_long_function_def = true
+long_to_short_function_def = true
+always_use_return = true
+whitespace_in_kwargs = true
+conditional_to_if = true
+normalize_line_endings = "unix"
+trailing_comma = true
+trailing_zero = true
+join_lines_based_on_source = false
+indent_submodule = false
+separate_kwargs_with_semicolon = true
+surround_whereop_typeparameters = true
+for_in_replacement = "∈"
+format_docstrings = true
+format_markdown = false
+ignore = ["docs"]
