--- a/.github/workflows/SpellCheck.yml
+++ b/.github/workflows/SpellCheck.yml
@@ -1,6 +1,11 @@
 name: Spell Check
 
-on: [pull_request]
+on:   
+  workflow_dispatch
+  push:
+    branches:
+      - 'main'
+
 
 jobs:
   typos-check:
