--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Suppressor = "0.2"
 Test = "1.0"
 TestItemRunner = "1.1.0"
 Aqua = "0.8.0"
-JET = "0.9.19"
+JET = ">= 0.9.0"
 julia = "1.8"
 
 [extras]
