fix continuous integration (#1)
* fix typo

* spell check on pr

* remove clean preview doc

* doctest to normal code snippets

* disable gurobi code on github runners

* update compat

* fix: standardize group name to lowercase in CodeQuality.yml

* chore: update Julia version requirement to 1.10 and fix test group

* test exclude licensed and 3rd party

* test sa

* formatting

* codecov ignore

* fix format

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,7 @@ jobs:
       matrix:
         # for core tests (latest and oldest supported versions)
         version:
-          - '1.8' # oldest
+          - '1.10' # oldest
           - '1'    # latest
         node:
           - os: 'ubuntu-latest'
@@ -48,7 +48,7 @@ jobs:
           - os: 'macOS-latest'
             arch: 'arm64'
         group:
-          - 'Core'
+          - 'continuous integration'
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
