--- a/Project.toml
+++ b/Project.toml
@@ -27,8 +27,8 @@ Suppressor = "0.2"
 Test = "1.0"
 TestItemRunner = "1.1.0"
 Aqua = "0.8.0"
-JET = "0.9.19"
-julia = "1.8"
+JET = ">= 0.9.0"
+julia = "1.10"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
