add permissions section to FormatCheck workflow; update paths in documentation workflow

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -6,6 +6,11 @@ on:
       - 'main'
     tags: 
       - '*'
+    paths:
+      - '.github/workflows/documentation.yml'
+      - 'src/**'
+      - 'docs/**'
+      - 'Project.toml'
   pull_request:
     branches:
       - 'main'
